@@ -11,7 +11,7 @@ AC_PREFIX_DEFAULT(/usr/local/nagios)
 PKG_NAME=nrpe
 PKG_VERSION="2.0a1"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="01-28-2003"
+PKG_REL_DATE="01-30-2003"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
